applications/harmelodic-website/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website
  annotations:
    cert-manager.io/issuer: website # Will generate Certificate
    cert-manager.io/revision-history-limit: "1"
spec:
  ingressClassName: public
  rules:
    - host: harmelodic.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website
                port:
                  name: http
    - host: www.harmelodic.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website
                port:
                  name: http
  tls:
    - hosts:
        - www.harmelodic.com
        - harmelodic.com
      secretName: tls-cert-harmelodic-com # Secret will be auto-generated by cert-manager
